# ai-engineering-portfolio

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
projects/autonomous-agent/: main.py  pyproject.toml
projects/doc-agent/: .env example  README.md  api.py  chat.py  ingest.py  judge.py  main.py  pyproject.toml  test_live.py
projects/doc-agent/tests/: test_api.py  test_chat.py  test_ingest.py  test_llm.py
projects/rag-pipeline/: README.md  chat.py  ingest.py  judge.py  llm.py  pyproject.toml
projects/rag-pipeline/tests/: test_chat.py  test_ingest.py  test_judge.py  test_llm.py
