[project]
name = "doc-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.7",
    "langchain-anthropic>=1.4.5",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]
